--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "description": "Учебный проект «Менеджер задач» от HTML Academy",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:htmlacademy-ecmascript/912019-taskmanager-9.git"
+  },
+
   "scripts": {
     "eslint": "eslint src/**/*.js",
     "test": "npm run eslint"
