--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "type": "git",
     "url": "git@github.com:htmlacademy-ecmascript/912019-taskmanager-9.git"
   },
-
   "scripts": {
+    "build": "webpack",
     "eslint": "eslint src/**/*.js",
+    "start": "webpack-dev-server --open",
     "test": "npm run eslint"
   },
   "devDependencies": {
     "eslint": "6.1.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "webpack": "4.39.1",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.7.2"
   },
   "engines": {
     "node": "10"
